--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^4.2.0",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.2.1",
     "react": "^19.2.3",
